wp-content/themes/lzd/style.css
/*
Theme Name: LZD
Theme URI: http://demo.qodeinteractive.com/minimum/
Description: A child theme of Minimum Theme
Author: Alpin Lab
Author URI: http://www.alpine-lab.com
Version: 1.1.3
Template: minimum
*/
@import url("../minimum/style.css");
@import url("fonts.css");

.drop_down .second ul li {
  padding: 5px 0 !important;
}

.portfolio_images img {
  width: auto;
}
.portfolio_detail pre {
  font-family: inherit;
  font-size: 13px;
}
.portfolio_navigation {
  height: 24px !important;
  line-height: 24px !important;
  margin-bottom: 15px !important;
}
.title h1 {
  margin-bottom: 15px;
}

.article_inner .image img {
  max-height: 238px;
}

.tp-caption.titre,
.tp-caption.big_description {
  font-family: inherit;
  color: white;
  background-color: transparent;
  text-shadow: 0 0 2px black, 0 0 2px black;
  filter: dropshadow(color=black, offx=0, offy=0);
}
.tp-caption.big_description {
  font-style: italic;
  white-space: normal !important;
}

footer {
  width: 100%;
  margin-bottom: 50px;
  margin-top: 100px;
}
footer .widget li a {
  font-size: 15px;
  margin-bottom: 0;
}
footer .left > a:first-child {
  float: left;
}
footer .left > br:nth-child(2) {
  display: none;
}
footer .left > .widget {
  margin-left: 120px;
}
footer .right .textwidget a {
  text-decoration: none !important;
  font-style: normal !important;
  color: #515151 !important;
}
footer .right .textwidget a:hover {
  text-decoration: underline !important;
}
footer .widget_search input[type="text"] {
  height: 25px !important;
}
footer .widget_search input[type="submit"] {
  height: 27px !important;
}
#searchform input[type="submit"]:hover {
  color: black !important;
  background-color: white !important;
}

.slider_small .slide_counter {
  display: none !important;
}
.slider_small .slide_item .image {
  overflow: hidden;
  margin: 0 0 8px 0;
  display: block;
  max-height: 169px;
}
.home .slider_small .separator.small {
  display: none !important;
}
.home .slider_small {
  margin-top: 70px !important;
}

.bsk-files-category li {
  background-color: black;
  width: 30%;
  float: left;
  margin: 1em 1.5%;
}
.bsk-files-category li:hover {
  background-color : #333;
}

.bsk-files-category li a {
  color: white;
  padding: 2em 0;
  text-decoration: none;
  text-align: center;
  font-family: inherit;
  font-size: 17px;
  display: block;
}

.bsk-files-category li:last-child {
  margin-bottom: 10em;
}

blockquote {
  border-left-color: black !important;
}

.post-type-archive-spectacle .isotope .isotope-item .article_inner > a.view.button.tiny:hover,
.post-type-archive-residence .isotope .isotope-item .article_inner > a.view.button.tiny:hover {
  color: black !important;
  background-color: white !important;
}

.flexslider .flex-viewport .slides .slide .image {
  text-align: center;
}
.flexslider .flex-viewport .slides .slide .image img {
  display: inline-block;
}

.rev_slider_wrapper .tparrows.tp-leftarrow:hover,
.rev_slider_wrapper .tparrows.tp-rightarrow:hover,
.bx-wrapper .bx-controls .bx-prev:hover,
.bx-wrapper .bx-controls .bx-next:hover {
  background-color: white !important;
}
.rev_slider_wrapper .tparrows.tp-leftarrow:hover,
.bx-wrapper .bx-controls .bx-prev:hover {
  background-image: url('img/arrow-left-black.png') !important;
}
.rev_slider_wrapper .tparrows.tp-rightarrow:hover,
.bx-wrapper .bx-controls .bx-next:hover {
  background-image: url('img/arrow-right-black.png') !important;
}

.pull-left {
  float: left;
}
.pull-right {
  float: right;
}

table.tablepress {
  border: solid 2px black !important;
  margin: 2em auto !important;
}
table.tablepress tr {
  height: 3em !important;
}
table.tablepress thead th {
  color: white !important;
  background-color: black !important;
  text-align: center !important;
  font-size: 17px !important;
}
table.tablepress tbody {
  padding: 5px 0 !important;
}
table.tablepress tbody td {
  border: 0 !important;
  text-align: center !important;
  font-size: 15px !important;
}

.single-spectacle .chapeau,
.single-residence .chapeau {
  margin-bottom: 20px;
}

